KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/Contact_Support_TR_dynamic_n__c.object-meta.xml
<CustomObject>
    <label>Contact Support TR - (dynamic) New</label>
    <nameField>
        <label>Contact Support TR - (dynamic) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Support TR - (dynamic) New</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>