KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/fields/Any_Recent_System_Environment_changes__c.field-meta.xml
<CustomField>
    <fullName>Any_Recent_System_Environment_changes__c</fullName>
    <label>Any Recent System/Environment changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>