KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/fields/Date_and_Time_of_Occurence__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Occurence__c</fullName>
    <label>Date and Time of Occurence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>