KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/fields/Impact_and_Severity__c.field-meta.xml
<CustomField>
    <fullName>Impact_and_Severity__c</fullName>
    <label>Impact and Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>