KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Choice</fullName>
            </value>
            <value>
                <fullName>Second Choice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>