KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/fields/Steps_to_Rep__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Rep__c</fullName>
    <label>Steps to Reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>