KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <externalId>true</externalId>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>