KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/fields/Workaround_available__c.field-meta.xml
<CustomField>
    <fullName>Workaround_available__c</fullName>
    <label>Workaround available?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>