KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/fields/Your_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Your_e_mail__c</fullName>
    <label>Your e-mail</label>
    <type>Email</type>
</CustomField>