KBmenu/force-app/main/default/objects/Contact_Support_TR_dynamic_n__c/recordTypes/Contact_Support_New.recordType-meta.xml
<RecordType>
    <fullName>Contact_Support_New</fullName>
    <active>true</active>
    <label>Contact Support New</label>
</RecordType>